# agentic-orchestration-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MCP_UPGRADE_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  mcp_server.py  orchestrator.py
app/agents/: base.py  builder.py  clarifier.py  critic.py  planner.py
app/budget/: adaptive_budget.py  backpressure.py
app/concurrency/: controller.py
app/debug/: ast_injector.py
app/fallback/: deterministic_generator.py
app/io/: artifacts.py  console.py
app/llm/: circuit_breaker.py  model_selector.py  provider.py  structured.py  token_tracker.py
app/models/: errors.py  schemas.py  state.py
app/observability/: metrics.py  model_tracker.py
app/persistence/: base.py  file_store.py
app/prompts/: builder_system.md  builder_user.md  clarifier_system.md  clarifier_user.md  critic_system.md  critic_user.md  planner_system.md  planner_user.md  versioning.py
app/testing/: chaos.py
app/validators/: code_validator.py  playability_checker.py  runtime_validator.py  schema_validator.py  security_scanner.py
docs/: ARCHITECTURE_DEEP_DIVE.md  architecture.md
outputs_audit/c2edd398/: checkpoint.json  context_snapshot.json  report.md  run_manifest.json  run_result.json
outputs_final/41323c2e/: checkpoint.json  context_snapshot.json  report.md  run_manifest.json  (+1 more)
tests/: conftest.py  test_checkpoint_resume.py  test_clarifier_stop.py  test_orchestrator.py  test_prompt_versioning.py  test_schemas.py  test_validators.py
(+29 files in other folders)
